feat: modified "Update" of the menu management

--- a/client/src/main/resources/static/menu_update.html
+++ b/client/src/main/resources/static/menu_update.html
@@ -10,7 +10,7 @@
 <div class="layui-container" style="margin-top: 50px;">
 
     <div class="layui-container" style="width: 500px;height: 330px;padding-top: 60px;">
-        <form class="layui-form" action="/menu/update" method="post">
+        <form class="layui-form" action="/clientmenu/update" method="post">
             <div class="layui-form-item">
                 <label class="layui-form-label">编号：</label>
                 <div class="layui-inline">
