feat: implement account management

--- a/client/src/main/resources/static/main.html
+++ b/client/src/main/resources/static/main.html
@@ -84,7 +84,7 @@
     <!-- 底部开始 -->
     <div class="layui-footer">
         <!-- 底部固定区域 -->
-        © 南风
+        © lumosss
     </div>
     <!-- 底部结束 -->
 </div>
