--- a/client/src/main/resources/static/index.html
+++ b/client/src/main/resources/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -9,13 +10,12 @@
 <div class="layui-container" style="width: 700px;height: 600px;margin-top: 0px;padding-top: 60px;">
 
     <div style="margin-left: 460px; width: 200px;">
-        Welcome back！&nbsp;&nbsp;&nbsp;<button class="layui-btn layui-btn-warm layui-btn-radius">Log out</button>
+        欢迎回来！<a href="/account/redirect/order" th:text="${session.user.nickname}"></a><a href="/account/logout">&nbsp;&nbsp;&nbsp;<button class="layui-btn layui-btn-warm layui-btn-radius">退出</button></a>
     </div>
 
     <table class="layui-hide" id="test" lay-filter="test"></table>
     <script type="text/html" id="barDemo">
-        <a class="layui-btn layui-btn-xs" lay-event="update">Update</a>
-        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">Delete</a>
+        <a class="layui-btn layui-btn-xs" lay-event="order">订购</a>
     </script>
     <script th:src="@{/layui/layui.js}" charset="utf-8"></script>
     <script>
@@ -29,14 +29,14 @@
                 ,cols: [
                     [
                         {field:'id', width:100, title: '编号', sort: true}
-                        ,{field:'name', width:150, title: '菜品'}
+                        ,{field:'name', width:200, title: '菜品'}
                         ,{field:'price', width:100, title: '单价'}
                         ,{field:'flavor', width:100, title: '口味'}
-                        ,{field:'type',width:100,  title: '分类',templet:function(data){
+                        ,{field:'tid',width:100,  title: '分类',templet:function(data){
                             return data.type.name
                         }
                     }
-                        ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:150}
+                        ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:70}
                     ]
                 ]
                 ,page: true
@@ -45,21 +45,20 @@
             //监听行工具事件
             table.on('tool(test)', function(obj){
                 var data = obj.data;
-                if(obj.event === 'update'){
-                    window.location.href="/clientmenu/findById/" + data.id;
-                    layer.alert("Update!")
-                }
-                if (obj.event === 'del') {
-                    layer.confirm('Are you sure to delete?', function (index) {
-                        window.location.href="/clientmenu/deleteById/" + data.id;
-                        layer.close(index);
-                    })
+                if(obj.event === 'order'){
+                    window.location.href="/order/save/"+data.id;
                 }
             });
         });
     </script>
 
 </div>
+<script>
+    //二级菜单联动
+    layui.use('element', function(){
+        var element = layui.element;
 
+    });
+</script>
 </body>
 </html>
