fix: fixed small problems in management page

--- a/client/src/main/resources/static/main.html
+++ b/client/src/main/resources/static/main.html
@@ -13,7 +13,7 @@
                 $("iframe").attr("src","/account/redirect/menu_manage");
             });
             $("#menu_add").click(function(){
-                $("iframe").attr("src","/menu/prepareSave");
+                $("iframe").attr("src","/clientmenu/findTypes");
             });
             $("#order_handler").click(function(){
                 $("iframe").attr("src","/account/redirect/order_handler");
